Fixed stretched image bug that happened in Safari

--- a/styles.css
+++ b/styles.css
@@ -79,11 +79,16 @@ body {
 }
 
 .gridRight1 h1 {
-    padding-top: 25%;
+    padding-top: 15%;
     padding-left: 20%;
     padding-right: 10%;
     padding-bottom: 33%;
     font-size: 50px;
+}
+
+hr.hr {
+    border: 3px solid #edede6;
+    border-radius: 10px;
 }
 
 .heroName {
@@ -155,7 +160,7 @@ th {
 
 .nestedImg {
     width: 100%;
-    height: 100%;
+    height: 285px;
     object-fit: cover;
     border-radius: 3%;
 }
